[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localitylens"
version = "0.1.1"
description = "A package for locality lens operations including directory walking, node parsing, and hybrid searching."
authors = [{name = "Your Name", email = "youremail@example.com"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://example.com/localitylens"
Documentation = "https://example.com/localitylens/docs"
Repository = "https://example.com/localitylens/repo"

[tool.setuptools]
packages = ["localitylens"]
