[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localitylens"
version = "0.1.1"
description = "A package for locality lens operations including directory walking, node parsing, and hybrid searching."
authors = [{name = "Your Name", email = "youremail@example.com"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "simple-fts5 @ git+https://github.com/theblackcat102/simple-fts5-py.git@334f2df1fec3e6bc0771b220cf91945916198ce5",
    "sqlite-vss==0.1.2",
    "tree-sitter==0.20.4",
    "tree-sitter-languages==1.10.2",
]

[project.urls]
Homepage = "https://example.com/localitylens"
Documentation = "https://example.com/localitylens/docs"
Repository = "https://example.com/localitylens/repo"

[tool.setuptools]
packages = [
    "localitylens",
    "localitylens.dir_walker",
    "localitylens.hybrid_search",
    "localitylens.node_parser",
    "localitylens.node_parser.text",
]